--- a/ejercicio/css/sticky-footer.css
+++ b/ejercicio/css/sticky-footer.css
@@ -5,24 +5,27 @@ html {
   min-height: 100%;
 }
 body {
-  margin-bottom: 60px; /* Margin bottom by footer height */
+  margin-bottom: 0px; /* Margin bottom by footer height */
 }
+
 .footer {
   position: absolute;
-  bottom: 0;
+  bottom: 10;
   width: 100%;
   height: 60px; /* Set the fixed height of the footer here */
   line-height: 60px; /* Vertically center the text there */
-  background-color: #f5f5f5;
+  background-color: #414141;
 }
-
-
 /* Custom page CSS
 -------------------------------------------------- */
 /* Not required for template or sticky footer method. */
-
 .container {
   width: auto;
   max-width: 680px;
   padding: 0 15px;
+}
+
+.content {
+  min-height: 100vh;
+  padding-bottom: 80px;
 }
